unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/pse__Forecast_Enhanced_Summary_Category__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedSummaryCategoryHelp</customHelpPage>
    <description>Stores the weighted category totals for the related region, practice, or group.</description>
    <label>Billing Forecast Summary Category</label>
    <nameField>
        <displayFormat>FSummaryCategory-{0000}</displayFormat>
        <label>Billing Forecast Summary Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Summary Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>