unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Adjusted_Value__c</fullName>
    <description>Formula field representing the value displayed on the Billing Forecast page for this billing forecast summary category.</description>
    <formula>IF(NOT(ISNULL(pse__Override_Value__c)),pse__Override_Value__c,IF(NOT(ISNULL(pse__Override_Rollup_Variance__c)),pse__Override_Rollup_Variance__c+pse__Forecast_Value__c,pse__Forecast_Value__c))</formula>
    <inlineHelpText>Formula field representing the value displayed on the Billing Forecast page for this billing forecast summary category.</inlineHelpText>
    <label>Adjusted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>