unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Forecast_Enhanced_Override__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Enhanced_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the currently active billing forecast override applied to this billing forecast summary category.</description>
    <inlineHelpText>Lookup to the currently active billing forecast override applied to this billing forecast summary category.</inlineHelpText>
    <label>Billing Forecast Override</label>
    <referenceTo>pse__Forecast_Enhanced_Override__c</referenceTo>
    <relationshipLabel>Billing Forecast Summary Categories</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Summary_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>