unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Forecast_Enhanced_Summary__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Enhanced_Summary__c</fullName>
    <description>Lookup to the relevant billing forecast summary record.</description>
    <inlineHelpText>Lookup to the relevant billing forecast summary record.</inlineHelpText>
    <label>Billing Forecast Summary</label>
    <referenceTo>pse__Forecast_Enhanced_Summary__c</referenceTo>
    <relationshipLabel>Billing Forecast Summary Categories</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Summary_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>