unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Forecast_Opportunities_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Opportunities_Value__c</fullName>
    <description>Total weighted opportunity amounts taken from the related billing forecast detail records for the selected time period in the relevant region, practice, or group.</description>
    <inlineHelpText>Total weighted opportunity amounts taken from the related billing forecast detail records for the selected time period in the relevant region, practice, or group.</inlineHelpText>
    <label>Billing Forecast Opportunities Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>