unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Forecast_Setup_Category__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Setup_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the billing forecast categories used on the Billing Forecast Setup page.</description>
    <inlineHelpText>Lookup to the billing forecast categories used on the Billing Forecast Setup page.</inlineHelpText>
    <label>Billing Forecast Setup Category</label>
    <referenceTo>pse__Forecast_Setup_Category__c</referenceTo>
    <relationshipLabel>Billing Forecast Summary Categories Setup</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Summary_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>