unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Forecast_Sublevels_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Sublevels_Value__c</fullName>
    <description>Total weighted sublevel amounts taken from the related billing forecast summary records for the selected time period for the child regions, practices, or groups.</description>
    <inlineHelpText>Total weighted sublevel amounts taken from the related billing forecast summary records for the selected time period for the child regions, practices, or groups.</inlineHelpText>
    <label>Billing Forecast Sublevels Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>