unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Forecast_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Value__c</fullName>
    <description>Total weighted amounts calculated for this billing forecast category, based on the billing forecast opportunities, project, and sublevels values in the related billing forecast detail records.</description>
    <inlineHelpText>Total weighted amounts calculated for this billing forecast category, based on the billing forecast opportunities, project, and sublevels values in the related billing forecast detail records.</inlineHelpText>
    <label>Billing Forecast Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>