unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Override_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user who created the currently active billing forecast override applied to this billing forecast summary category.</description>
    <inlineHelpText>Lookup to the user who created the currently active billing forecast override applied to this billing forecast summary category.</inlineHelpText>
    <label>Override Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Billing Forecast Summary Categories</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Summary_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>