unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Override_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_CreatedDate__c</fullName>
    <description>Created date and time of the currently active billing forecast override applied to this billing forecast summary category.</description>
    <formula>pse__Forecast_Enhanced_Override__r.CreatedDate</formula>
    <inlineHelpText>Created date and time of the currently active billing forecast override applied to this billing forecast summary category.</inlineHelpText>
    <label>Override Created Date</label>
    <type>DateTime</type>
</CustomField>