unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Notes__c</fullName>
    <description>Notes on the currently active billing forecast override applied to this billing forecast summary category.</description>
    <formula>pse__Forecast_Enhanced_Override__r.pse__Notes__c</formula>
    <inlineHelpText>Notes on the currently active billing forecast override applied to this billing forecast summary category.</inlineHelpText>
    <label>Override Notes</label>
    <type>Text</type>
</CustomField>