unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary_Category__c/fields/pse__Override_Rollup_Variance__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Rollup_Variance__c</fullName>
    <description>Sum of roll-up variances for all summary categories below this summary category in the RPG hierarchy, including overrides on related billing forecast detail categories.</description>
    <inlineHelpText>Sum of roll-up variances for all summary categories below this summary category in the RPG hierarchy, including overrides on related billing forecast detail categories.</inlineHelpText>
    <label>Override Roll-Up Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>